--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,29 @@
+# Android/Java
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.gradle/
 local.properties
+.idea/
+.DS_Store
+
+# Android Studio
+.idea/caches
+.idea/libraries
+.idea/modules.xml
+.idea/workspace.xml
+.idea/navEditor.xml
+.idea/assetWizardSettings.xml
+
+# Build
+build/
+*/build/
+.externalNativeBuild/
+.cxx/
+captures/
+
+# Signing files
+*.keystore
+*.jks
+
+# Others
+*.log
+.env
