Add phân quyền 1 + activity_payment.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,6 @@
         <activity android:name=".activities.ProductDetailActivity" />
         <activity android:name=".activities.CartActivity" />
         <activity android:name=".activities.OrderListActivity" />
+        <activity android:name=".activities.StaffActivity"/>
     </application>
 </manifest>
