--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:allowBackup="true"
@@ -41,5 +43,8 @@
         <activity android:name=".activities.SearchProductActivity"/>
         <activity android:name=".activities.AddNewProductActivity"/>
         <activity android:name=".activities.FeedbackByProductListActivity"/>
+        <activity android:name=".activities.MapActivity" />
+        <activity android:name=".activities.ChatAiActivity" />
+
     </application>
 </manifest>
